# CSC472

./: .gitignore.txt  CMakeLists.txt  README.md
assignment1/: CMakeLists.txt
assignment1/src/: BSpline.cpp  BSpline.h  BSplineScene.cpp  BSplineScene.h  CMakeLists.txt  Circle.cpp  ControlPoints.cpp  ControlPoints.h  circle.h  main.cpp
assignment2/: CMakeLists.txt
assignment2/src/: CMakeLists.txt  Color.cpp  Color.hpp  LookupTables.hpp  MarchingCubes.cpp  MarchingCubes.hpp  Mesh.cpp  Mesh.hpp  Object.hpp  PolygonizationScene.cpp  PolygonizationScene.hpp  Polygonize.cpp  Polygonize.hpp  Sphere.cpp  Sphere.hpp  main.cpp
assignment3/: CMakeLists.txt
assignment3/src/: CMakeLists.txt  LSystemScene.cpp  LSystemScene.hpp  PythagorasTree.cpp  PythagorasTree.hpp  TurtleValue.hpp  main.cpp
